CDOC-65: Add support for RSA based cryptosticks